<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="htwg.trackingapp.HelpMenu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="horizontal"
        android:scrollbarStyle="insideOverlay">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/helpMenu"
            android:id="@+id/textView"
            android:textSize="@dimen/capture1" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

            <GridLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:layout_marginBottom="2dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/homeMenu"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_row="2"
                    android:layout_column="0">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView"
                        android:src="@drawable/ic_launcher"
                        android:layout_column="0"
                        android:layout_row="1"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/helpSelectTransportVehicle"
                        android:id="@+id/textView2"
                        android:layout_column="2"
                        android:layout_row="1"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_column="0"
                    android:layout_row="3">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@drawable/ic_action_go"
                        android:layout_column="0"
                        android:layout_row="3"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/helpStartTracking"
                        android:id="@+id/textView3"
                        android:layout_row="3"
                        android:layout_column="2"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_column="0"
                    android:layout_row="4">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView3"
                        android:src="@drawable/ic_action_stop"
                        android:layout_column="0"
                        android:layout_row="4"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/helpStopTracking"
                        android:id="@+id/textView4"
                        android:layout_column="2"
                        android:layout_row="4"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/helpRatingsTab"
                    android:id="@+id/textView8"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_column="0"
                    android:layout_row="6">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView4"
                        android:src="@drawable/ic_action_add"
                        android:layout_column="0"
                        android:layout_row="6"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/helpAddRating"
                        android:id="@+id/textView5"
                        android:layout_column="2"
                        android:layout_row="6"
                        android:layout_gravity="center_vertical" />
                </LinearLayout>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/helpAddRatingTab"
                    android:id="@+id/textView9"
                    android:layout_row="7"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_column="0"
                    android:layout_row="8">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView5"
                        android:src="@drawable/ic_action_save"
                        android:layout_column="0"
                        android:layout_row="8"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:layout_marginRight="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/helpSaveRating"
                        android:id="@+id/textView6"
                        android:layout_column="2"
                        android:layout_row="8"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

                <TextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:text="@string/helpDailyRoutesTab"
                    android:id="@+id/textView10"
                    android:layout_row="9"
                    android:layout_column="0"
                    android:layout_columnSpan="2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/helpDailyRoutes"
                    android:id="@+id/textView11"
                    android:layout_row="10"
                    android:layout_column="0"
                    android:layout_columnSpan="2" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:id="@+id/button"
                    android:background="@drawable/transport_image_button_style"
                    android:layout_row="11"
                    android:layout_column="0"
                    android:layout_marginTop="20dp"
                    android:onClick="buttonOnClick" />

            </GridLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
