<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".first_start_screen_1"
    android:animateLayoutChanges="true"
    android:isScrollContainer="false">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:id="@+id/welcomeTextView"
            android:textSize="@dimen/capture1"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:editable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcomeString"
            android:id="@+id/welcomeStringTextView"
            android:layout_marginBottom="15dp"
            android:textSize="@dimen/TextViewSize"
            android:textIsSelectable="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returners"
            android:id="@+id/returnersTextView"
            android:textSize="@dimen/TextViewSize"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:hint="@string/byCarText" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="5"
            android:rowCount="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnersCancel"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/ic_action_cancel"
                android:background="@drawable/image_button_style"
                android:layout_marginRight="15dp"
                android:onClick="buttonOnClick"
                android:layout_gravity="center"
                android:padding="@dimen/standard_image_button" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/returnersCheck"
                android:src="@drawable/ic_action_accept"
                android:layout_row="0"
                android:layout_column="1"
                android:background="@drawable/image_button_style"
                android:baselineAlignBottom="false"
                android:onClick="buttonOnClick"
                android:padding="@dimen/standard_image_button"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp" />
        </GridLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:id="@+id/textView"
            android:phoneNumber="false"
            android:linksClickable="true"
            android:textSize="@dimen/TextViewSize"
            android:layout_gravity="center_horizontal|top" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:rowCount="1"
            android:id="@+id/gridLayout"
            android:layout_marginTop="10dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genderWomen"
                android:src="@drawable/female"
                android:background="@drawable/image_button_style"
                android:onClick="buttonOnClick"
                android:focusableInTouchMode="false"
                android:layout_marginRight="15dp"
                android:padding="@dimen/standard_image_button" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/genderMen"
                android:src="@drawable/male"
                android:background="@drawable/image_button_style"
                android:onClick="buttonOnClick"
                android:clickable="true"
                android:hapticFeedbackEnabled="false"
                android:layout_marginLeft="15dp"
                android:padding="@dimen/standard_image_button" />
        </GridLayout>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/statusBar"
            android:columnCount="5"
            android:rowCount="1"
            android:orientation="horizontal"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="bottom"
                    android:layout_marginBottom="-5dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/currentActivity"
                        android:singleLine="false"
                        android:clickable="false"
                        android:checked="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forwardButton"
                        android:enabled="true"
                        android:layout_marginLeft="-10dp"
                        android:layout_marginRight="-10dp"
                        android:onClick="buttonOnClick" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Status3"
                        android:enabled="true"
                        android:clickable="false" />
                </RadioGroup>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="right"
                    android:id="@+id/forwardGroup"
                    android:gravity="bottom">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="@string/next"
                        android:id="@+id/forwardButton"
                        android:background="@drawable/image_button_style"
                        android:onClick="buttonOnClick"
                        android:gravity="right" />

                    <ImageButton
                        android:layout_width="20dp"
                        android:layout_height="25dp"
                        android:id="@+id/forwardButton"
                        android:src="@drawable/forward"
                        android:background="@android:color/transparent"
                        android:scaleType="fitXY"
                        android:onClick="buttonOnClick" />

                </RadioGroup>

            </FrameLayout>
        </GridLayout>

    </LinearLayout>

</RelativeLayout>
